--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,57 @@
 
-*.codekit
+# Created by https://www.gitignore.io/api/osx,codekit,sublimetext,sass
 
-*.sass
+### OSX ###
+.DS_Store
+.AppleDouble
+.LSOverride
 
-*.sassc
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+
+### CodeKit ###
+# General CodeKit files to ignore
+config.codekit
+/min
+
+
+### SublimeText ###
+# cache files for sublime text
+*.tmlanguage.cache
+*.tmPreferences.cache
+*.stTheme.cache
+
+# workspace files are user-specific
+*.sublime-workspace
+
+# project files should be checked into the repository, unless a significant
+# proportion of contributors will probably not be using SublimeText
+# *.sublime-project
+
+# sftp configuration file
+sftp-config.json
+
+
+### Sass ###
+.sass-cache/
+*.css.map
